--- a/api/views/index.html
+++ b/api/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,23 +9,19 @@
 		<meta name="author" content="" />
 		<link rel="shortcut icon" href="IMG/favicon_lg.png" type="image/x-icon" />
 		<link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="css/index.css">
 		<title>RequestHandler</title>
 	</head>
 	<body>
 		<noscript>Please enable JavaScript for this page.</noscript>
 		<div class="container">
-			<header>
-				<div></div>
-			</header>
-			<main>
-				<div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo voluptas pariatur, tenetur a autem rem quam labore suscipit? Itaque enim voluptas, cupiditate distinctio libero dignissimos dolores. Nam earum debitis veniam?</div>
-			</main>
-			<footer>
-				<div></div>
-			</footer>
+			<header class="my-header">{% include 'header.html' %}</header>
+			<main class="my-content">{% block content %} {% endblock %}</main>
+			<footer class="my-footer">{% include 'footer.html' %}</footer>
 		</div>
 		<script src="bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="jquery/dist/jquery.min.js"></script>
-		<script src="js/index.js"></script>
+        <script src="gsap/dist/gsap.min.js"></script>
+		<script src="js/index.js" type="module"></script>
 	</body>
 </html>
