--- a/api/views/main.html
+++ b/api/views/main.html
@@ -8,9 +8,11 @@
 				This is a simple API, based on NodeJS (ExpressJS), that provides service to handle requests from users of the website. Users could send their requests and administration of the website could handle these requests anyhow, also with
 				users' email based responses.
 			</p>
-			<p class="mt-3">You are on a greeting page of the API which means that the server is working properly.</p>
-			<p class="mt-3">All API endpoints start with URL: <br><br> <code>http://0.0.0.0:3000/api/v1/</code>.</p>
-            <p class="mt-5">For more information about API visit <a href="https://github.com/MarkDanilchenko/Requests-handler" target="_blank">GitHub</a>.</p>
+			<p class="mt-3">You are on a greeting page of the API which means that the server is working properly!</p>
+			<hr>
+			<p class="mt-3">All API endpoints are available with: <br><br> <code>http://{{server_host}}:3000/api/v1/</code></p>
+			<p class="mt-3">OpenAPI3 (Swagger) documentation is available with: <br><br> <code>http://{{server_host}}:3000/api/v1/docs</code></p>
+            <p class="mt-5">For more information about API visit <a href="https://github.com/MarkDanilchenko/Requests-handler" target="_blank">GitHub</a></p>
 		</div>
 	</div>
 </div>
