Fix bugs. Add Dockerfile for API.

--- a/api/views/header.html
+++ b/api/views/header.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<nav class="navbar sticky-top bg-body">
 		<div class="container-fluid mt-3 d-flex justify-content-center align-items-center">
-			<img src="IMG/favicon_lg.png" class="" alt="API service logo" title="API service logo" />
+			<img src="IMG/favicon_lg.png" alt="API service logo" title="API service logo" />
 		</div>
 	</nav>
 </div>
