--- a/api/views/main.html
+++ b/api/views/main.html
@@ -10,8 +10,8 @@
 			</p>
 			<p class="mt-3">You are on a greeting page of the API which means that the server is working properly!</p>
 			<hr>
-			<p class="mt-3">All API endpoints are available with: <br><br> <code>http://{{server_host}}:3000/api/v1/</code></p>
-			<p class="mt-3">OpenAPI3 (Swagger) documentation is available with: <br><br> <code>http://{{server_host}}:3000/api/v1/docs</code></p>
+			<p class="mt-3">All API endpoints are available with: <br><br> <code>http://{{server_host}}:{{server_port}}/api/v1/</code></p>
+			<p class="mt-3">OpenAPI3 (Swagger) documentation is available with: <br><br> <code>http://{{server_host}}:{{server_port}}/api/v1/docs</code></p>
             <p class="mt-5">For more information about API visit <a href="https://github.com/MarkDanilchenko/Requests-handler" target="_blank">GitHub</a></p>
 		</div>
 	</div>
