--- a/server/views/startPage/index.html
+++ b/server/views/startPage/index.html
@@ -17,9 +17,12 @@
 	<div class="container">
 		<header class="my-header">{% include 'startPage/header.html' %}></header>
 
+		<main class="my-main"></main>
 
 		<footer class="my-footer">{% include 'startPage/footer.html' %}</footer>
 	</div>
+
+	<script src="/static/dist/bundle.js"></script>
 	<!-- <script src="bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="jquery/dist/jquery.min.js"></script>
 	<script src="gsap/dist/gsap.min.js"></script>
