--- a/server/views/startPage/footer.html
+++ b/server/views/startPage/footer.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-12 mt-3">
-		<hr class="my-1 offset-3" style="width: 50%" />
+		<hr class="my-1" />
 		<p class="text-center">2024 MyHomeworks, &#123; &#125;</p>
 	</div>
 </div>
