Refactor greeting page

--- a/server/views/startPage/header.html
+++ b/server/views/startPage/header.html
@@ -1,7 +1,9 @@
 <div class="row">
-	<nav class="navbar sticky-top bg-body">
-		<div class="container-fluid mt-3 d-flex justify-content-center align-items-center">
-			<img src="IMG/favicon_lg.png" alt="API service logo" title="API service logo" />
-		</div>
-	</nav>
+	<div class="col-12 mt-3">
+		<nav class="navbar sticky-top bg-body">
+			<div class="container-fluid mt-3 d-flex justify-content-center align-items-center">
+				<img src="/static/IMG/favicon_lg.png" alt="API logo" title="API logo" />
+			</div>
+		</nav>
+	</div>
 </div>
