--- a/server/assets/scss/fonts.scss
+++ b/server/assets/scss/fonts.scss
@@ -1,9 +1,7 @@
-// -----> IMPORT
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-// -----> USAGE
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+
 .pacifico-regular {
-    font-family: "Pacifico", cursive;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
+  font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
