--- a/server/assets/scss/startPage.scss
+++ b/server/assets/scss/startPage.scss
@@ -1,22 +1,8 @@
-.container {
-  min-height: 100vh;
+.my-main {
+  color: $custom_semiwhite;
+  position: relative;
+  top: 10vh;
+  h1 > div {
+    text-align: justify;
+  }
 }
-
-.my-footer {
-  position: sticky;
-  top: 100vh;
-}
-
-// .my-main {
-//   color: $colorCustom_semiwhite;
-//   position: relative;
-//   top: 15vh;
-//   h4 > div {
-//     text-align: justify;
-//   }
-// }
-
-// header img {
-//   width: 50px;
-//   height: 50px;
-// }
