--- a/server/views/startPage/index.html
+++ b/server/views/startPage/index.html
@@ -15,19 +15,12 @@
 <body>
 	<noscript>Please enable JavaScript for this page.</noscript>
 	<div class="container">
-		<header class="my-header">{% include 'startPage/header.html' %}></header>
-
-		<main class="my-main"></main>
-
+		<header class="my-header">{% include 'startPage/header.html' %}</header>
+		<main class="my-main">{% block content %}{% endblock %}</main>
 		<footer class="my-footer">{% include 'startPage/footer.html' %}</footer>
 	</div>
 
 	<script src="/static/dist/bundle.js"></script>
-	<!-- <script src="bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="jquery/dist/jquery.min.js"></script>
-	<script src="gsap/dist/gsap.min.js"></script>
-	<script src="js/index.js" type="module"></script> -->
-	<!-- <script src="assets/js/index.js"></script> -->
 </body>
 
 </html>
