--- a/server/views/startPage/main.html
+++ b/server/views/startPage/main.html
@@ -1,23 +1,23 @@
-{% extends 'index.html' %} {% block content %}
+{% extends 'startPage/index.html' %} {% block content %}
 <div class="row">
 	<div class="col-10 offset-1 text-center">
-		<h1 class="pacifico-regular" id="logoMainPage">RequestHandler</h1>
-		<h4 class="pacifico-regular mt-3">API</h4>
+		<h1 class="pacifico-regular" id="logoStartPage">BidsHandler API</h1>
 		<div class="col-8 offset-2">
+			<p class="mt-3">Greeting page of API &#128075;</p>
 			<p class="mt-5">
-				This is a simple API, based on NodeJS (ExpressJS), that provides service to handle requests from users of the
-				website. Users could send their requests and administration of the website could handle these requests anyhow,
-				also with
-				users' email based responses.
+				This API based on NodeJS (ExpressJS) and provides service to handle bids from users. Users could form their bids
+				and admins of the service could handle it anyhow with email response.
 			</p>
-			<p class="mt-3">You are on a greeting page of the API which means that the server is working properly!</p>
 			<hr>
-			<p class="mt-3">All API endpoints are available with: <br><br>
-				<code>http://{{server_host}}:{{server_port}}/api/v1/</code></p>
-			<p class="mt-3">OpenAPI3 (Swagger) documentation is available with: <br><br>
-				<code>http://{{server_host}}:{{server_port}}/api/v1/docs</code></p>
-			<p class="mt-5">For more information about API visit <a href="https://github.com/MarkDanilchenko/Requests-handler"
-					target="_blank">GitHub</a></p>
+			<p class="mt-5">OpenAPI3 (Swagger) documentation is available on:<br><br>
+				<span>
+					<a href="/api/v1/docs/" target="_blank">
+						<code>http://127.0.0.1:3000/api/v1/docs/</code>
+					</a>
+				</span>
+			</p>
+			<p class="mt-5">For more information about this project visit <a
+					href="https://github.com/MarkDanilchenko/BidsHandler" target="_blank">GitHub</a></p>
 		</div>
 	</div>
 </div>
