--- a/server/views/startPage/main.html
+++ b/server/views/startPage/main.html
@@ -1,24 +1,27 @@
 {% extends 'startPage/index.html' %} {% block content %}
 <div class="row">
-	<div class="col-10 offset-1 text-center">
-		<h1 class="pacifico-regular" id="logoStartPage">BidsHandler API</h1>
-		<div class="col-8 offset-2">
-			<p class="mt-3">Greeting page of API &#128075;</p>
-			<p class="mt-5">
-				This API based on NodeJS (ExpressJS) and provides service to handle bids from users. Users could form their bids
-				and admins of the service could handle it anyhow with email response.
-			</p>
-			<hr>
-			<p class="mt-5">OpenAPI3 (Swagger) documentation is available on:<br><br>
-				<span>
-					<a href="/api/v1/docs/" target="_blank">
-						<code>http://127.0.0.1:3000/api/v1/docs/</code>
-					</a>
-				</span>
-			</p>
-			<p class="mt-5">For more information about this project visit <a
-					href="https://github.com/MarkDanilchenko/BidsHandler" target="_blank">GitHub</a></p>
-		</div>
-	</div>
+  <div class="col-10 offset-1 text-center">
+    <h1 class="pacifico-regular" id="logoStartPage">BidsHandler API</h1>
+    <div class="col-8 offset-2">
+      <p class="mt-3">Greeting page of API &#128075;</p>
+      <p class="mt-5">
+        This API based on NodeJS (ExpressJS) and provides service to handle bids from users. Users could form their bids
+        and admins of the service could handle it anyhow with email response.
+      </p>
+      <hr />
+      <p class="mt-5">
+        OpenAPI3 (Swagger) documentation is available on:<br /><br />
+        <span>
+          <a href="/api/v1/docs/" target="_blank">
+            <code>http://127.0.0.1:3000/api/v1/docs/</code>
+          </a>
+        </span>
+      </p>
+      <p class="mt-5">
+        For more information about this project visit
+        <a href="https://github.com/MarkDanilchenko/BidsHandler" target="_blank">GitHub</a>
+      </p>
+    </div>
+  </div>
 </div>
 {% endblock %}
